# fpy

./: README.md
py-client/: pyproject.toml
py-client/examples/users/: login.py
py-client/py_client/: client.py
py-client/py_client/common/: enums.py  models.py
py-client/py_client/modules/: __init__.py
py-client/py_client/modules/users/: datasource.py
py-client/py_client/modules/users/models/: client_details.py  get_hs_token.py  logout.py  save_fcm_token.py  user_details.py
py-client/py_client/modules/watchlists/: datasource.py
py-client/py_client/modules/watchlists/models/: __init__.py  add_scrips.py  delete_scrips.py  get_names.py  get_predefined_scrips.py  get_predefined_watchlists.py  get_quotes.py  get_security_info.py  get_watchlist.py  search_scrips.py
py-client/py_client/utils/: decoders.py  encoders.py  stateful.py
py-client/py_client/utils/datasources/: __init__.py
py-client/tests/: test_user_module.py
